--- a/index.html
+++ b/index.html
@@ -15,41 +15,52 @@
     }
 
     /* ====== Área do 3D com background por trás ====== */
-    .logo3d-wrap{
-      position:relative;
-      width:100%;
-      height:60vh;
-      min-height:360px;
-      max-height:78vh;
-      display:grid;
-      place-items:center;
-      overflow:hidden;
-      isolation:isolate; /* garante a pilha de camadas local */
-    }
-    /* background fica atrás do canvas, sem bloquear cliques */
-    .logo3d-wrap::before{
-      content:"";
-      position:absolute; inset:0;
-      background-image:url("backgroundpc.png");   /* <- DESKTOP */
-      background-size:cover;
-      background-position:center;
-      background-repeat:no-repeat;
-      z-index:0;
-      pointer-events:none;
-      opacity:1;
-      transform:translateZ(0);
-    }
-    /* Mobile: sem corte (contain) + mais altura */
-    @media (max-width: 640px){
-      .logo3d-wrap{ height:64vh; min-height:340px }
-      .logo3d-wrap::before{
-        background-image:url("backgroundmoblie.png");  /* <- MOBILE */
-        background-size:contain;       /* não corta */
-        background-repeat:no-repeat;
-        background-position:center top;/* ajusta o foco; mude para center se preferir */
-        background-color:#0b0b0b;      /* “preenche” as bordas laterais/embaixo */
-      }
-    }
+/* Base */
+/* seção cheia */
+.logo3d-wrap {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+  background: none;
+}
+
+.logo3d-wrap::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("backgroundpc.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 0;
+  opacity: 1;
+  pointer-events: none;
+}
+
+/* MOBILE */
+@media (max-width: 640px){
+  html, body { margin: 0; background: #fff; }
+
+  .logo3d-wrap {
+    min-height: 100svh;  /* usa toda a altura visível */
+    background: #fff;
+  }
+
+  .logo3d-wrap::before {
+    background-image: url("backgroundmobile.png");
+    background-size: contain;         /* mostra a imagem toda */
+    background-repeat: no-repeat;
+    background-position: top center;  /* alinha pelo topo */
+    background-color: #fff;           /* completa o fundo */
+  }
+}
+
+body{
+  margin:0;
+  background:#fff; /* evita faixas pretas fora do hero */
+}
+
 
     /* Canvas por cima do background */
     canvas{
@@ -82,7 +93,7 @@
 <body>
   <div class="logo3d-wrap" id="logo3d">
     <div class="msg" id="msg" style="display:none"></div>
-    <div class="hint">arraste com o mouse ou com o dedo para girar</div>
+    <div class="hint"></div>
   </div>
 
   <script type="module">
@@ -145,7 +156,7 @@
           // ===== Ajuste de escala (logo menor) =====
           const box = new THREE.Box3().setFromObject(model);
           const size = box.getSize(new THREE.Vector3()).length();
-          const scale = (CONFIG.initialScale * 1.4) / (size || 1); // ↓ de 1.6 para 1.4
+          const scale = (CONFIG.initialScale * 1) / (size || 1); // ↓ de 1.6 para 1.4
           model.scale.setScalar(scale);
 
           model.traverse((o)=>{
