--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CARVA — 3D Logo (.gltf com assets externos)</title>
+  <title>CARVA</title>
   <style>
     :root{ --bg:#ffffff; --fg:#0b0b0b; }
     html,body{height:100%}
