--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
     <div class="msg" id="msg" style="display:none"></div>
 
     <!-- (NOVO) Botão centralizado entre a logo 3D e o texto -->
-    <div class="botao" id="botao">
-      <button>ENTRAR NA LISTA DE ESPERA</button>
-    </div>
+<div class="botao" id="botao">
+  <a href="https://chat.whatsapp.com/H56m4OGC63F3HJ09ila6uv?mode=wwt" target="_blank" class="botao-whatsapp">
+    ENTRAR NA COMUNIDADE CARVA
+  </a>
+</div>
 
     <div class="hint">Nada que nos empreda sobrevive</div>
   </div>
